# ml-journey

./: pyproject.toml  requirements.txt
classic-ml/: gradient_descent.ipynb  linear_regreation_2.ipynb  linear_regretion.ipynb  polynominal_descent.ipynb
classic-ml/regulazation/: overfitting_vizualization.ipynb
linear_algebra/: cosine_similarity.ipynb  main.ipynb  matrix.ipynb  vectors.ipynb
ml_journey.egg-info/: PKG-INFO  SOURCES.txt
