[tool.poetry]
name = "ml-journey"
version = "0.1.0"
description = ""
authors = ["artempochuvalov <artempochuvalov@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_journey"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.7.2"
numpy = "^2.3.3"
matplotlib = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
